--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,11 +13,11 @@
 
     <!-- include spec files here... -->
     <script src="spec/SpecHelper.js"></script>
-    <script src="spec/noteSpec.js"></script>
-    <script src="spec/noteListSpec.js"></script>
-    <script src="spec/noteListViewSpec.js"></script>
+    <!-- <script src="spec/noteSpec.js"></script> -->
+    <!-- <script src="spec/noteListSpec.js"></script> -->
+    <!-- <script src="spec/noteListViewSpec.js"></script> -->
     <script src="spec/noteControllerSpec.js" defer></script>
-    <script src="spec/singleNoteViewSpec.js"></script>
+    <!-- <script src="spec/singleNoteViewSpec.js"></script> -->
   </head>
 
   <body>
